syntax = "proto3";

package admin.service.v1;
option go_package = "kratos-blog/gen/api/go/admin/service/v1;v1";

import "gnostic/openapi/v3/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/pagination.proto";
import "file/service/v1/attachment.proto";

option (gnostic.openapi.v3.document) = {
  info: {
    title: "附件管理接口";
    description: "附件管理";
    version: "1.0";
  }
};

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 附件服务
service AttachmentService {
  // 获取附件列表
  rpc ListAttachment (pagination.PagingRequest) returns (file.service.v1.ListAttachmentResponse) {
    option (google.api.http) = {
      get: "/blog/v1/attachments"
    };
  }

  // 获取附件数据
  rpc GetAttachment (file.service.v1.GetAttachmentRequest) returns (file.service.v1.Attachment) {
    option (google.api.http) = {
      get: "/blog/v1/attachments/{id}"
    };
  }

  // 创建附件
  rpc CreateAttachment (file.service.v1.CreateAttachmentRequest) returns (file.service.v1.Attachment) {
    option (google.api.http) = {
      post: "/blog/v1/attachments"
      body: "*"
    };
  }

  // 更新附件
  rpc UpdateAttachment (file.service.v1.UpdateAttachmentRequest) returns (file.service.v1.Attachment) {
    option (google.api.http) = {
      put: "/blog/v1/attachments/{id}"
      body: "attachment"
    };
  }

  // 删除附件
  rpc DeleteAttachment (file.service.v1.DeleteAttachmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/attachments/{id}"
    };
  }
}
