syntax = "proto3";

package admin.service.v1;
option go_package = "kratos-blog/gen/api/go/admin/service/v1;v1";

import "third_party/openapiv3/annotations.proto";
import "third_party/google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "pagination/pagination.proto";
import "content/service/v1/tag.proto";

option (openapi.v3.document) = {
  info: {
    title: "标签管理接口";
    description: "标签管理";
    version: "1.0";
  }
};

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 标签服务
service TagService {
  // 获取标签列表
  rpc ListTag (pagination.PagingRequest) returns (content.service.v1.ListTagResponse) {
    option (google.api.http) = {
      get: "/blog/v1/tags"
    };
  }

  // 获取标签数据
  rpc GetTag (content.service.v1.GetTagRequest) returns (content.service.v1.Tag) {
    option (google.api.http) = {
      get: "/blog/v1/tags/{id}"
    };
  }

  // 创建标签
  rpc CreateTag (content.service.v1.CreateTagRequest) returns (content.service.v1.Tag) {
    option (google.api.http) = {
      post: "/blog/v1/tags"
      body: "*"
    };
  }

  // 更新标签
  rpc UpdateTag (content.service.v1.UpdateTagRequest) returns (content.service.v1.Tag) {
    option (google.api.http) = {
      put: "/blog/v1/tags/{id}"
      body: "tag"
    };
  }

  // 删除标签
  rpc DeleteTag (content.service.v1.DeleteTagRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/blog/v1/tags/{id}"
    };
  }
}
